# lms_system

./: .env  .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
data/: data_study.json  data_users.json
study/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
study/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscribe.py  0004_delete_subscribe.py  0005_subscribe.py  0006_lesson_is_active_lesson_last_login.py  0007_remove_lesson_is_active_remove_lesson_last_login.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: cp.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py  0004_subscribe.py  0005_delete_subscribe.py  0006_user_is_verified_user_token.py
